Rota para excluir agendamento da reuniao
