# src/modules/minutes/infra/http/controllers/SchedulesController.ts
@@ -2,6 +2,7 @@ import { Request, Response } from 'express';
 import { container } from 'tsyringe';
 
 import CreateScheduleService from '@modules/minutes/services/CreateScheduleService';
+import DeleteScheduleMeetingService from '@modules/minutes/services/DeleteScheduleMeetingService';
 
 export default class MinutesController {
   public async create(request: Request, response: Response): Promise<Response> {
@@ -15,5 +16,25 @@ export default class MinutesController {
     const createdSchedule = await cretaeSheduleSevice.execute(schedule);
 
     return response.json(createdSchedule);
+  }
+
+  public async destroy(
+    request: Request,
+    response: Response,
+  ): Promise<Response> {
+    const userId = request.user.id;
+
+    const { minuteId } = request.params;
+
+    const scheduleMeeting = container.resolve(DeleteScheduleMeetingService);
+
+    await scheduleMeeting.execute({
+      userId,
+      minuteId: Number(minuteId),
+    });
+
+    return response.json({
+      message: 'Schedule meeting has been deleted',
+    });
   }
 }
