# src/modules/minutes/infra/http/routes/schedule.routes.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 
 import ensureAuthenticated from '@shared/infra/http/middlewares/ensureAuthenticated';
+import { celebrate, Joi, Segments } from 'celebrate';
 import SchedulesController from '../controllers/SchedulesController';
 
 const scheduleRouter = Router();
@@ -10,5 +11,15 @@ const schedulesController = new SchedulesController();
 scheduleRouter.use(ensureAuthenticated);
 
 scheduleRouter.post('/', schedulesController.create);
+
+scheduleRouter.delete(
+  '/minuteId/:minuteId',
+  celebrate({
+    [Segments.PARAMS]: {
+      minuteId: Joi.number().required(),
+    },
+  }),
+  schedulesController.destroy,
+);
 
 export default scheduleRouter;
